--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
+    "react-spinners": "^0.17.0",
     "reactjs-popup": "^2.0.6",
     "smooth-scrollbar": "^8.8.4",
     "sweetalert2": "^11.22.5"
